--- a/Hompage.html
+++ b/Hompage.html
@@ -101,7 +101,7 @@
               <p>In this section, I will teach you tips and tricks that I learned in Photoshop. Throughout my journey on learning, 
                 I had a few setbacks, but you can easily avoid this using the tips that I will teach you
               </p>
-              <a href="Photoshop.html" target="_blank">Learn More</a>
+              <a href="/html/Photoshop.html" target="_blank">Learn More</a>
             </div>
             <div>
               <i class="fa-solid fa-video"></i>
@@ -109,7 +109,7 @@
               <p>In this section, I will teach you tips and tricks that I learned in Premiere Pro. Throughout my journey on learning, 
                 I had a few setbacks, but you can easily avoid this using the tips that I will teach you
               </p>
-              <a href="Premiere.html" target="_blank">Learn More</a>
+              <a href="/html/Premiere.html" target="_blank">Learn More</a>
             </div>
             <div>
               <i class="fa-brands fa-java"></i>
@@ -117,7 +117,7 @@
               <p>In this section, I will teach you tips and tricks that I learned in Java. Throughout my journey on learning, 
                 I had a few setbacks, but you can easily avoid this using the tips that I will teach you
               </p>
-              <a href="Java.html" target="_blank">Learn More</a>
+              <a href="/html/Java.html" target="_blank">Learn More</a>
             </div>
           </div>  
           </center>
